// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme extendMixin() can extend a mixing with additional properties 1`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-df-size)",
  "fontWeight": "normal",
  "lineHeight": "var(--text-df-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Theme extendMixin() can extend a mixing with additional properties 2`] = `
Object {
  "color": "red",
  "display": "inline-block",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-df-size)",
  "fontWeight": "bold",
  "lineHeight": "var(--text-df-line-height)",
  "opacity": 1,
  "wordWrap": "break-word",
}
`;

exports[`Theme extendMixin() will deep merge properties 1`] = `
Object {
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-df-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-df-width)",
}
`;

exports[`Theme extendMixin() will deep merge properties 2`] = `
Object {
  ":focus": Object {
    "outline": "none",
  },
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-df-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-df-width)",
}
`;

exports[`Theme mixin() can merge from multiple targets 1`] = `
Object {
  "backgroundColor": "var(--palette-neutral-bg-base)",
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-sm-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-sm-width)",
  "color": "red",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-df-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l3-letter-spacing)",
  "lineHeight": "var(--text-df-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Theme mixin() merges objects with mixin 1`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "24px",
  "fontWeight": "bold",
  "lineHeight": "var(--text-df-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Theme overwriteMixin() can completely replace an existing mixin 1`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-df-size)",
  "fontWeight": "normal",
  "lineHeight": "var(--text-df-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Theme overwriteMixin() can completely replace an existing mixin 2`] = `
Object {
  "fontSize": "20px",
}
`;

exports[`Theme toVariables() returns tokens as a flat object of CSS variables 1`] = `
Object {
  "border-df-radius": "0.21rem",
  "border-df-width": "0.07rem",
  "border-lg-radius": "0.32rem",
  "border-lg-width": "0.14rem",
  "border-sm-radius": "0.14rem",
  "border-sm-width": "0.04rem",
  "breakpoint-lg-query": "(min-width: 114.29em) and (max-width: 137.07em)",
  "breakpoint-lg-query-size": 1600,
  "breakpoint-lg-root-line-height": 1.62,
  "breakpoint-lg-root-text-size": "18.15px",
  "breakpoint-md-query": "(min-width: 91.43em) and (max-width: 114.21em)",
  "breakpoint-md-query-size": 1280,
  "breakpoint-md-root-line-height": 1.52,
  "breakpoint-md-root-text-size": "17.01px",
  "breakpoint-sm-query": "(min-width: 68.57em) and (max-width: 91.36em)",
  "breakpoint-sm-query-size": 960,
  "breakpoint-sm-root-line-height": 1.42,
  "breakpoint-sm-root-text-size": "15.94px",
  "breakpoint-xl-query": "(min-width: 137.14em)",
  "breakpoint-xl-query-size": 1920,
  "breakpoint-xl-root-line-height": 1.73,
  "breakpoint-xl-root-text-size": "19.36px",
  "breakpoint-xs-query": "(min-width: 45.71em) and (max-width: 68.50em)",
  "breakpoint-xs-query-size": 640,
  "breakpoint-xs-root-line-height": 1.33,
  "breakpoint-xs-root-text-size": "14.94px",
  "depth-content": 100,
  "depth-dialog": 1500,
  "depth-menu": 1600,
  "depth-modal": 1300,
  "depth-navigation": 1000,
  "depth-overlay": 1200,
  "depth-sheet": 1100,
  "depth-toast": 1400,
  "depth-tooltip": 1700,
  "heading-l1-letter-spacing": "0.25px",
  "heading-l1-line-height": 1.5,
  "heading-l1-size": "1.14rem",
  "heading-l2-letter-spacing": "0.33px",
  "heading-l2-line-height": 1.69,
  "heading-l2-size": "1.43rem",
  "heading-l3-letter-spacing": "0.44px",
  "heading-l3-line-height": 1.9,
  "heading-l3-size": "1.79rem",
  "heading-l4-letter-spacing": "0.59px",
  "heading-l4-line-height": 2.14,
  "heading-l4-size": "2.23rem",
  "heading-l5-letter-spacing": "0.79px",
  "heading-l5-line-height": 2.4,
  "heading-l5-size": "2.79rem",
  "heading-l6-letter-spacing": "1.05px",
  "heading-l6-line-height": 2.7,
  "heading-l6-size": "3.49rem",
  "palette-brand-bg-base": "#fff",
  "palette-brand-bg-disabled": "#fff",
  "palette-brand-bg-focused": "#fff",
  "palette-brand-bg-hovered": "#fff",
  "palette-brand-bg-selected": "#fff",
  "palette-brand-color-00": "#fff",
  "palette-brand-color-10": "#fff",
  "palette-brand-color-20": "#fff",
  "palette-brand-color-30": "#fff",
  "palette-brand-color-40": "#fff",
  "palette-brand-color-50": "#fff",
  "palette-brand-color-60": "#fff",
  "palette-brand-color-70": "#fff",
  "palette-brand-color-80": "#fff",
  "palette-brand-color-90": "#fff",
  "palette-brand-fg-base": "#fff",
  "palette-brand-fg-disabled": "#fff",
  "palette-brand-fg-focused": "#fff",
  "palette-brand-fg-hovered": "#fff",
  "palette-brand-fg-selected": "#fff",
  "palette-danger-bg-base": "#fff",
  "palette-danger-bg-disabled": "#fff",
  "palette-danger-bg-focused": "#fff",
  "palette-danger-bg-hovered": "#fff",
  "palette-danger-bg-selected": "#fff",
  "palette-danger-color-00": "#fff",
  "palette-danger-color-10": "#fff",
  "palette-danger-color-20": "#fff",
  "palette-danger-color-30": "#fff",
  "palette-danger-color-40": "#fff",
  "palette-danger-color-50": "#fff",
  "palette-danger-color-60": "#fff",
  "palette-danger-color-70": "#fff",
  "palette-danger-color-80": "#fff",
  "palette-danger-color-90": "#fff",
  "palette-danger-fg-base": "#fff",
  "palette-danger-fg-disabled": "#fff",
  "palette-danger-fg-focused": "#fff",
  "palette-danger-fg-hovered": "#fff",
  "palette-danger-fg-selected": "#fff",
  "palette-failure-bg-base": "#fff",
  "palette-failure-bg-disabled": "#fff",
  "palette-failure-bg-focused": "#fff",
  "palette-failure-bg-hovered": "#fff",
  "palette-failure-bg-selected": "#fff",
  "palette-failure-color-00": "#fff",
  "palette-failure-color-10": "#fff",
  "palette-failure-color-20": "#fff",
  "palette-failure-color-30": "#fff",
  "palette-failure-color-40": "#fff",
  "palette-failure-color-50": "#fff",
  "palette-failure-color-60": "#fff",
  "palette-failure-color-70": "#fff",
  "palette-failure-color-80": "#fff",
  "palette-failure-color-90": "#fff",
  "palette-failure-fg-base": "#fff",
  "palette-failure-fg-disabled": "#fff",
  "palette-failure-fg-focused": "#fff",
  "palette-failure-fg-hovered": "#fff",
  "palette-failure-fg-selected": "#fff",
  "palette-info-bg-base": "#fff",
  "palette-info-bg-disabled": "#fff",
  "palette-info-bg-focused": "#fff",
  "palette-info-bg-hovered": "#fff",
  "palette-info-bg-selected": "#fff",
  "palette-info-color-00": "#fff",
  "palette-info-color-10": "#fff",
  "palette-info-color-20": "#fff",
  "palette-info-color-30": "#fff",
  "palette-info-color-40": "#fff",
  "palette-info-color-50": "#fff",
  "palette-info-color-60": "#fff",
  "palette-info-color-70": "#fff",
  "palette-info-color-80": "#fff",
  "palette-info-color-90": "#fff",
  "palette-info-fg-base": "#fff",
  "palette-info-fg-disabled": "#fff",
  "palette-info-fg-focused": "#fff",
  "palette-info-fg-hovered": "#fff",
  "palette-info-fg-selected": "#fff",
  "palette-muted-bg-base": "#fff",
  "palette-muted-bg-disabled": "#fff",
  "palette-muted-bg-focused": "#fff",
  "palette-muted-bg-hovered": "#fff",
  "palette-muted-bg-selected": "#fff",
  "palette-muted-color-00": "#fff",
  "palette-muted-color-10": "#fff",
  "palette-muted-color-20": "#fff",
  "palette-muted-color-30": "#fff",
  "palette-muted-color-40": "#fff",
  "palette-muted-color-50": "#fff",
  "palette-muted-color-60": "#fff",
  "palette-muted-color-70": "#fff",
  "palette-muted-color-80": "#fff",
  "palette-muted-color-90": "#fff",
  "palette-muted-fg-base": "#fff",
  "palette-muted-fg-disabled": "#fff",
  "palette-muted-fg-focused": "#fff",
  "palette-muted-fg-hovered": "#fff",
  "palette-muted-fg-selected": "#fff",
  "palette-neutral-bg-base": "#fff",
  "palette-neutral-bg-disabled": "#fff",
  "palette-neutral-bg-focused": "#fff",
  "palette-neutral-bg-hovered": "#fff",
  "palette-neutral-bg-selected": "#fff",
  "palette-neutral-color-00": "#fff",
  "palette-neutral-color-10": "#fff",
  "palette-neutral-color-20": "#fff",
  "palette-neutral-color-30": "#fff",
  "palette-neutral-color-40": "#fff",
  "palette-neutral-color-50": "#fff",
  "palette-neutral-color-60": "#fff",
  "palette-neutral-color-70": "#fff",
  "palette-neutral-color-80": "#fff",
  "palette-neutral-color-90": "#fff",
  "palette-neutral-fg-base": "#fff",
  "palette-neutral-fg-disabled": "#fff",
  "palette-neutral-fg-focused": "#fff",
  "palette-neutral-fg-hovered": "#fff",
  "palette-neutral-fg-selected": "#fff",
  "palette-primary-bg-base": "#fff",
  "palette-primary-bg-disabled": "#fff",
  "palette-primary-bg-focused": "#fff",
  "palette-primary-bg-hovered": "#fff",
  "palette-primary-bg-selected": "#fff",
  "palette-primary-color-00": "#fff",
  "palette-primary-color-10": "#fff",
  "palette-primary-color-20": "#fff",
  "palette-primary-color-30": "#fff",
  "palette-primary-color-40": "#fff",
  "palette-primary-color-50": "#fff",
  "palette-primary-color-60": "#fff",
  "palette-primary-color-70": "#fff",
  "palette-primary-color-80": "#fff",
  "palette-primary-color-90": "#fff",
  "palette-primary-fg-base": "#fff",
  "palette-primary-fg-disabled": "#fff",
  "palette-primary-fg-focused": "#fff",
  "palette-primary-fg-hovered": "#fff",
  "palette-primary-fg-selected": "#fff",
  "palette-secondary-bg-base": "#fff",
  "palette-secondary-bg-disabled": "#fff",
  "palette-secondary-bg-focused": "#fff",
  "palette-secondary-bg-hovered": "#fff",
  "palette-secondary-bg-selected": "#fff",
  "palette-secondary-color-00": "#fff",
  "palette-secondary-color-10": "#fff",
  "palette-secondary-color-20": "#fff",
  "palette-secondary-color-30": "#fff",
  "palette-secondary-color-40": "#fff",
  "palette-secondary-color-50": "#fff",
  "palette-secondary-color-60": "#fff",
  "palette-secondary-color-70": "#fff",
  "palette-secondary-color-80": "#fff",
  "palette-secondary-color-90": "#fff",
  "palette-secondary-fg-base": "#fff",
  "palette-secondary-fg-disabled": "#fff",
  "palette-secondary-fg-focused": "#fff",
  "palette-secondary-fg-hovered": "#fff",
  "palette-secondary-fg-selected": "#fff",
  "palette-success-bg-base": "#fff",
  "palette-success-bg-disabled": "#fff",
  "palette-success-bg-focused": "#fff",
  "palette-success-bg-hovered": "#fff",
  "palette-success-bg-selected": "#fff",
  "palette-success-color-00": "#fff",
  "palette-success-color-10": "#fff",
  "palette-success-color-20": "#fff",
  "palette-success-color-30": "#fff",
  "palette-success-color-40": "#fff",
  "palette-success-color-50": "#fff",
  "palette-success-color-60": "#fff",
  "palette-success-color-70": "#fff",
  "palette-success-color-80": "#fff",
  "palette-success-color-90": "#fff",
  "palette-success-fg-base": "#fff",
  "palette-success-fg-disabled": "#fff",
  "palette-success-fg-focused": "#fff",
  "palette-success-fg-hovered": "#fff",
  "palette-success-fg-selected": "#fff",
  "palette-tertiary-bg-base": "#fff",
  "palette-tertiary-bg-disabled": "#fff",
  "palette-tertiary-bg-focused": "#fff",
  "palette-tertiary-bg-hovered": "#fff",
  "palette-tertiary-bg-selected": "#fff",
  "palette-tertiary-color-00": "#fff",
  "palette-tertiary-color-10": "#fff",
  "palette-tertiary-color-20": "#fff",
  "palette-tertiary-color-30": "#fff",
  "palette-tertiary-color-40": "#fff",
  "palette-tertiary-color-50": "#fff",
  "palette-tertiary-color-60": "#fff",
  "palette-tertiary-color-70": "#fff",
  "palette-tertiary-color-80": "#fff",
  "palette-tertiary-color-90": "#fff",
  "palette-tertiary-fg-base": "#fff",
  "palette-tertiary-fg-disabled": "#fff",
  "palette-tertiary-fg-focused": "#fff",
  "palette-tertiary-fg-hovered": "#fff",
  "palette-tertiary-fg-selected": "#fff",
  "palette-warning-bg-base": "#fff",
  "palette-warning-bg-disabled": "#fff",
  "palette-warning-bg-focused": "#fff",
  "palette-warning-bg-hovered": "#fff",
  "palette-warning-bg-selected": "#fff",
  "palette-warning-color-00": "#fff",
  "palette-warning-color-10": "#fff",
  "palette-warning-color-20": "#fff",
  "palette-warning-color-30": "#fff",
  "palette-warning-color-40": "#fff",
  "palette-warning-color-50": "#fff",
  "palette-warning-color-60": "#fff",
  "palette-warning-color-70": "#fff",
  "palette-warning-color-80": "#fff",
  "palette-warning-color-90": "#fff",
  "palette-warning-fg-base": "#fff",
  "palette-warning-fg-disabled": "#fff",
  "palette-warning-fg-focused": "#fff",
  "palette-warning-fg-hovered": "#fff",
  "palette-warning-fg-selected": "#fff",
  "shadow-lg-blur": "0.77rem",
  "shadow-lg-spread": "0rem",
  "shadow-lg-x": "0rem",
  "shadow-lg-y": "0.61rem",
  "shadow-md-blur": "0.44rem",
  "shadow-md-spread": "0rem",
  "shadow-md-x": "0rem",
  "shadow-md-y": "0.37rem",
  "shadow-sm-blur": "0.25rem",
  "shadow-sm-spread": "0rem",
  "shadow-sm-x": "0rem",
  "shadow-sm-y": "0.23rem",
  "shadow-xl-blur": "1.34rem",
  "shadow-xl-spread": "0rem",
  "shadow-xl-x": "0rem",
  "shadow-xl-y": "0.98rem",
  "shadow-xs-blur": "0.14rem",
  "shadow-xs-spread": "0rem",
  "shadow-xs-x": "0rem",
  "shadow-xs-y": "0.14rem",
  "spacing-df": "1.25rem",
  "spacing-lg": "3.75rem",
  "spacing-md": "2.50rem",
  "spacing-sm": "0.63rem",
  "spacing-type": "vertical-rhythm",
  "spacing-unit": 17.5,
  "spacing-xl": "5rem",
  "spacing-xs": "0.31rem",
  "text-df-line-height": 1.25,
  "text-df-size": "1rem",
  "text-lg-line-height": 1.25,
  "text-lg-size": "1.13rem",
  "text-sm-line-height": 1.25,
  "text-sm-size": "0.89rem",
  "typography-font-heading": "system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "typography-font-monospace": "\\"Lucida Console\\", Monaco, monospace",
  "typography-font-system": "system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "typography-font-text": "system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "typography-root-line-height": 1.25,
  "typography-root-text-size": "14px",
}
`;
